--- a/environment.yml
+++ b/environment.yml
@@ -363,6 +363,7 @@ dependencies:
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - cycler==0.11.0
+      - et-xmlfile==1.1.0
       - fonttools==4.38.0
       - joblib==1.3.2
       - kiwisolver==1.4.5
@@ -370,6 +371,7 @@ dependencies:
       - matplotlib==3.5.3
       - networkx==2.6.3
       - numba==0.56.4
+      - openpyxl==3.1.3
       - patsy==1.0.1
       - pillow==9.5.0
       - pynndescent==0.5.13
