--- a/environment.yml
+++ b/environment.yml
@@ -160,6 +160,7 @@ dependencies:
   - pyqt=5.15.7=py37hd77b12b_0
   - pyqt5-sip=12.11.0=py37hd77b12b_0
   - pyrsistent=0.18.0=py37h196d8e1_0
+  - pysal=1.14.4=py37_0
   - pysocks=1.7.1=py37_1
   - python=3.7.0=hea74fb7_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
@@ -387,3 +388,4 @@ dependencies:
       - torch==1.13.1
       - tqdm==4.67.1
       - umap-learn==0.5.7
+prefix: C:\Users\Lem\anaconda3\envs\spatial-deconv
