--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: spatial-deconv
 channels:
+  - r
   - conda-forge
   - defaults
 dependencies:
@@ -18,6 +19,7 @@ dependencies:
   - bleach=4.1.0=pyhd3eb1b0_0
   - bottleneck=1.3.5=py37h080aedc_0
   - brotlipy=0.7.0=py37h2bbff1b_1003
+  - bs4=4.11.1=hd3eb1b0_0
   - bwidget=1.9.14=h57928b3_1
   - bzip2=1.0.8=h2466b09_7
   - ca-certificates=2024.9.24=haa95532_0
@@ -33,6 +35,7 @@ dependencies:
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
   - entrypoints=0.4=py37haa95532_0
+  - esda=2.4.1=pyhd3eb1b0_0
   - fftw=3.3.9=h2bbff1b_2
   - flit-core=3.6.0=pyhd3eb1b0_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
@@ -43,17 +46,20 @@ dependencies:
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
   - freetype=2.12.1=hdaf720e_2
+  - fribidi=1.0.10=h8d14728_0
   - gcc_impl_win-64=14.2.0=h4b1235c_1
   - gfortran_impl_win-64=14.2.0=h945a573_1
   - glib=2.82.2=h7025463_0
   - glib-tools=2.82.2=h4394cf3_0
   - glpk=5.0=h8ffe710_0
   - gmp=6.3.0=hfeafd45_2
+  - graphite2=1.3.13=h63175ca_1003
   - gsl=2.7=hdfb1a43_0
   - gst-plugins-base=1.24.7=hb0a98b8_0
   - gstreamer=1.24.7=h5006eae_0
   - gxx_impl_win-64=14.2.0=hb404c5b_1
   - h5py=3.7.0=nompi_py37h24adfc3_101
+  - harfbuzz=9.0.0=h2bedf89_1
   - hdf5=1.12.2=nompi_h57737ce_101
   - icc_rt=2022.1.0=h6049295_2
   - icu=75.1=he0c23c2_0
@@ -94,6 +100,7 @@ dependencies:
   - libgcc-devel_win-64=14.2.0=h7c23ffb_101
   - libgfortran=14.2.0=h719f0c7_1
   - libgfortran5=14.2.0=hf020157_1
+  - libgit2=1.8.4=h66fae2d_1
   - libglib=2.82.2=h7025463_0
   - libgomp=14.2.0=h1383e82_1
   - libiconv=1.17=hcfcfb64_2
@@ -104,6 +111,7 @@ dependencies:
   - libnghttp2=1.64.0=he0c23c2_0
   - libogg=1.3.5=h2bbff1b_1
   - libpng=1.6.44=h3ca93ac_0
+  - libpysal=4.5.1=pyhd3eb1b0_0
   - libsodium=1.0.18=h62dcd97_0
   - libsqlite=3.47.0=h2466b09_1
   - libssh2=1.11.1=he619c9f_0
@@ -177,14 +185,19 @@ dependencies:
   - qtwebkit=5.212=hbc9c816_17
   - r-abind=1.4_5=r44hc72bb7e_1006
   - r-askpass=1.2.1=r44h11b023d_0
+  - r-assertthat=0.2.1=r44hc72bb7e_5
   - r-base=4.4.2=hd01798a_0
   - r-base64enc=0.1_3=r44h11b023d_1007
   - r-bh=1.84.0_0=r44hc72bb7e_1
   - r-bitops=1.0_9=r44h11b023d_0
+  - r-brew=1.0_10=r44hc72bb7e_1
+  - r-brio=1.1.5=r44heeb0ed9_1
   - r-bslib=0.8.0=r44hc72bb7e_0
   - r-cachem=1.1.0=r44h11b023d_1
+  - r-callr=3.7.6=r44hc72bb7e_1
   - r-catools=1.18.3=r44h8ae3a7c_0
   - r-cli=3.6.3=r44h8ae3a7c_1
+  - r-clipr=0.8.0=r44hc72bb7e_3
   - r-cluster=2.1.6=r44hb0f4521_1
   - r-codetools=0.2_20=r44hc72bb7e_1
   - r-colorspace=2.1_1=r44h11b023d_0
@@ -192,12 +205,17 @@ dependencies:
   - r-cowplot=1.1.3=r44hc72bb7e_1
   - r-cpp11=0.5.0=r44hc72bb7e_0
   - r-crayon=1.5.3=r44hc72bb7e_1
+  - r-credentials=2.0.2=r44hc72bb7e_0
   - r-crosstalk=1.2.1=r44hc72bb7e_1
   - r-curl=6.0.1=r44h97788c5_0
   - r-data.table=1.15.4=r44h3d7605b_1
   - r-deldir=2.0_4=r44hb0f4521_1
+  - r-desc=1.4.3=r44hc72bb7e_1
+  - r-devtools=2.4.5=r44hc72bb7e_3
+  - r-diffobj=0.3.5=r44h11b023d_3
   - r-digest=0.6.37=r44h8ae3a7c_0
   - r-dotcall64=1.2=r44hb0f4521_0
+  - r-downlit=0.4.4=r44hc72bb7e_1
   - r-dplyr=1.1.4=r44h8ae3a7c_1
   - r-dqrng=0.3.2=r44h8ae3a7c_1
   - r-ellipsis=0.3.2=r44h11b023d_3
@@ -213,9 +231,12 @@ dependencies:
   - r-future=1.34.0=r44h785f33e_0
   - r-future.apply=1.11.2=r44hc72bb7e_1
   - r-generics=0.1.3=r44hc72bb7e_3
+  - r-gert=2.1.4=r44hc223fc2_0
   - r-ggplot2=3.5.1=r44hc72bb7e_1
   - r-ggrepel=0.9.6=r44h8ae3a7c_0
   - r-ggridges=0.5.6=r44hc72bb7e_1
+  - r-gh=1.4.1=r44hc72bb7e_1
+  - r-gitcreds=0.1.2=r44hc72bb7e_3
   - r-globals=0.16.3=r44hc72bb7e_1
   - r-glue=1.8.0=r44h11b023d_0
   - r-goftest=1.2_3=r44h11b023d_3
@@ -230,8 +251,10 @@ dependencies:
   - r-htmlwidgets=1.6.4=r44h785f33e_3
   - r-httpuv=1.6.15=r44h8ae3a7c_1
   - r-httr=1.4.7=r44hc72bb7e_1
+  - r-httr2=1.0.7=r44hc72bb7e_0
   - r-ica=1.0_3=r44hc72bb7e_3
   - r-igraph=2.0.3=r44ha6e1cd6_1
+  - r-ini=0.3.1=r44hc72bb7e_1006
   - r-irlba=2.3.5.1=r44h05aa911_3
   - r-isoband=0.2.7=r44h8ae3a7c_3
   - r-jquerylib=0.1.4=r44hc72bb7e_3
@@ -261,17 +284,27 @@ dependencies:
   - r-patchwork=1.3.0=r44hc72bb7e_0
   - r-pbapply=1.7_2=r44hc72bb7e_1
   - r-pillar=1.9.0=r44hc72bb7e_2
+  - r-pkgbuild=1.4.5=r44hc72bb7e_0
   - r-pkgconfig=2.0.3=r44hc72bb7e_4
+  - r-pkgdown=2.1.1=r44hc72bb7e_0
+  - r-pkgload=1.4.0=r44hc72bb7e_0
   - r-plotly=4.10.4=r44hc72bb7e_1
   - r-plyr=1.8.9=r44h8ae3a7c_1
   - r-png=0.1_8=r44h11b023d_2
   - r-polyclip=1.10_7=r44h8ae3a7c_0
+  - r-praise=1.0.0=r44hc72bb7e_1008
+  - r-prettyunits=1.2.0=r44hc72bb7e_1
+  - r-processx=3.8.4=r44h11b023d_1
+  - r-profvis=0.4.0=r44h11b023d_0
   - r-progressr=0.15.1=r44hc72bb7e_0
-  - r-promises=1.3.1=r44h8ae3a7c_0
+  - r-promises=1.3.2=r44h8ae3a7c_0
+  - r-ps=1.8.1=r44h11b023d_0
   - r-purrr=1.0.2=r44h11b023d_1
   - r-r6=2.5.1=r44hc72bb7e_3
+  - r-ragg=1.3.3=r44h01f36c3_0
   - r-rann=2.6.2=r44h8ae3a7c_0
   - r-rappdirs=0.3.3=r44h11b023d_3
+  - r-rcmdcheck=1.4.0=r44h785f33e_3
   - r-rcolorbrewer=1.1_3=r44h785f33e_3
   - r-rcpp=1.0.13_1=r44h8ae3a7c_0
   - r-rcppannoy=0.0.22=r44h8ae3a7c_1
@@ -280,18 +313,24 @@ dependencies:
   - r-rcpphnsw=0.6.0=r44h8ae3a7c_1
   - r-rcppprogress=0.4.2=r44hc72bb7e_4
   - r-rcpptoml=0.2.2=r44h8ae3a7c_2
+  - r-rematch2=2.1.2=r44hc72bb7e_4
+  - r-remotes=2.5.0=r44hc72bb7e_1
   - r-reshape2=1.4.1=0a
   - r-reticulate=1.40.0=r44hd9cd2f5_0
   - r-rlang=1.1.4=r44h8ae3a7c_1
   - r-rmarkdown=2.29=r44hc72bb7e_0
   - r-rocr=1.0_11=r44h6addd8b_4
+  - r-roxygen2=7.3.2=r44h8ae3a7c_1
   - r-rprojroot=2.0.4=r44hc72bb7e_1
   - r-rspectra=0.16_2=r44h3dc9324_0
+  - r-rstudioapi=0.17.1=r44hc72bb7e_0
   - r-rtsne=0.17=r44h72df5a6_1
+  - r-rversions=2.1.2=r44hc72bb7e_3
   - r-sass=0.4.9=r44h8ae3a7c_1
   - r-scales=1.3.0=r44hc72bb7e_1
   - r-scattermore=1.2=r44h8ae3a7c_3
   - r-sctransform=0.4.1=r44h3dc9324_1
+  - r-sessioninfo=1.2.2=r44hc72bb7e_3
   - r-seurat=5.1.0=r44h8ae3a7c_1
   - r-seuratobject=5.0.2=r44h8ae3a7c_1
   - r-shiny=1.9.1=r44h785f33e_0
@@ -310,21 +349,33 @@ dependencies:
   - r-stringr=1.5.1=r44h785f33e_1
   - r-survival=3.7_0=r44heeb0ed9_1
   - r-sys=3.4.3=r44h11b023d_0
+  - r-systemfonts=1.1.0=r44h2e3bef4_1
   - r-tensor=1.5=r44hc72bb7e_1006
+  - r-testthat=3.2.1.1=r44h8ae3a7c_1
+  - r-textshaping=0.4.0=r44h5da55db_2
   - r-tibble=3.2.1=r44h11b023d_3
   - r-tidyr=1.3.1=r44h8ae3a7c_1
   - r-tidyselect=1.2.1=r44hc72bb7e_1
   - r-tinytex=0.54=r44hc72bb7e_0
+  - r-urlchecker=1.0.1=r44hc72bb7e_3
+  - r-usethis=3.1.0=r44hc72bb7e_0
   - r-utf8=1.2.4=r44h11b023d_1
   - r-uwot=0.1.16=r44h8ae3a7c_1
   - r-vctrs=0.6.5=r44h8ae3a7c_1
   - r-viridislite=0.4.2=r44hc72bb7e_2
+  - r-waldo=0.6.1=r44hc72bb7e_0
+  - r-whisker=0.4.1=r44hc72bb7e_2
   - r-withr=3.0.2=r44hc72bb7e_0
   - r-xfun=0.48=r44h8ae3a7c_0
+  - r-xml2=1.3.6=r44hba6163c_2
+  - r-xopen=1.0.1=r44hc72bb7e_1
   - r-xtable=1.8_4=r44hc72bb7e_6
   - r-yaml=2.3.10=r44h11b023d_0
+  - r-zip=2.3.1=r44h11b023d_1
   - r-zoo=1.8_12=r44h11b023d_2
   - requests=2.28.1=py37haa95532_0
+  - rtools=3.4.0=0
+  - scikit-learn=1.0.2=py37hf11a4ad_1
   - scipy=1.7.3=py37h7a0a035_2
   - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=65.6.3=py37haa95532_0
@@ -378,7 +429,6 @@ dependencies:
       - pynndescent==0.5.13
       - pyparsing==3.1.4
       - scanpy==1.9.3
-      - scikit-learn==1.0.2
       - seaborn==0.12.2
       - session-info==1.0.0
       - statsmodels==0.13.5
@@ -388,4 +438,3 @@ dependencies:
       - torch==1.13.1
       - tqdm==4.67.1
       - umap-learn==0.5.7
-prefix: C:\Users\Lem\anaconda3\envs\spatial-deconv
